Greatest of three number

--- a/messages_en.properties
+++ b/messages_en.properties
@@ -1,3 +1,12 @@
 enter_name = Enter your name
 enter_salary = Enter your monthly salary
+Name = Name
 Basic_salary = Basic Salary
+Annual_salary = Annual Salary
+Tax = Tax
+Hra = Hra
+Medical_allowance = Medical Allowance
+Travel_allowance = Travel Allowance
+Provisional_fund = Provisional Fund
+Gross_salary = Gross Salary
+Net_salary = Net Salary
