--- a/messages_hi.properties
+++ b/messages_hi.properties
@@ -1,3 +1,12 @@
 enter_name = अपना नाम दर्ज करें
 enter_salary = अपना मासिक वेतन दर्ज करें
+Name = नाम
 Basic_salary = मूल वेतन
+Annual_salary = वार्षिक वेतन
+Tax = कर
+Hra = एचआरए
+Medical_allowance = चिकित्सा भत्ता
+Travel_allowance = यात्रा भत्ता
+Provisional_fund = अनंतिम निधि
+Gross_salary = सकल वेतन
+Net_salary = शुद्ध वेतन
